modules/gdscript/tests/scripts/analyzer/errors/nullable_narrowed_assignment.gd
func test():
    var foo: int? = null
    if foo: # narrow
        var bar: int = foo # explicit
        bar = foo
        print(bar)
